# torchkm

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cuda-tests.yml  docs.yml  publish.yml  tests.yml
benchmarks/: PERF_FINDINGS.md  README.md  _common.py  benchmark_torchkm.py  run_table3.sh  table2_simulation.py  table3_benchmarks.py  table4_nystrom.py
benchmarks/cuda-runs/: INDEX.md  README.md
benchmarks/cuda-runs/20260523T182003Z/: coverage-cuda.xml  junit-cuda.xml  runner-snapshot.txt
benchmarks/cuda-runs/20260523T182553Z/: coverage-cuda.xml  junit-cuda.xml  runner-snapshot.txt
benchmarks/cuda-runs/20260523T183847Z/: coverage-cuda.xml  junit-cuda.xml  runner-snapshot.txt
benchmarks/results/: baseline_warm_smoke_medium.json  baseline_warm_stress_svc.json  final_warm_smoke_medium.json  final_warm_stress_svc.json  paper_final_warm_smoke_medium.json  paper_final_warm_stress_svc.json
docs/: faq.md  index.md  installation.md  quickstart.md
docs/api/: estimators.md  solvers.md  utilities.md
docs/developer/: adding_a_solver.md  adding_an_estimator.md  architecture.md  benchmarking.md  cuda_testing.md  testing.md
docs/examples/: dwd_classification.md  logistic_regression.md  nystrom_large_scale.md  probability_calibration.md  reproduce_paper_benchmarks.md  svm_make_circles.md
docs/user_guide/: device_and_precision.md  dwd.md  logistic_regression.md  model_selection.md  nystrom.md  probability_calibration.md  quantile_regression.md  svm.md
examples/: dwd_classification.py  logistic_regression.py  nystrom_large_scale.py  probability_calibration.py  svm_make_circles.py
scripts/: run_cuda_tests.sh
tests/: test_coverage_extras.py  test_cuda_smoke.py  test_cvkdwd.py  test_cvkhuber.py  test_cvklogit.py  test_cvknyqr_backend.py  test_cvknyssvm.py  test_cvkqr.py  test_cvksqsvm.py  test_cvksvm.py  test_estimator_internals.py  test_estimator_paths.py  test_estimators.py  test_estimators_helpers.py  test_imports.py  test_kernel_docstrings.py  test_kqr_estimator.py  test_nystrom_backend_smoke.py  test_paper_api.py  test_platt_calibration.py  test_platt_plot.py  test_public_api_smoke.py  test_sklearn_wrapper.py  test_solver_backend_smoke.py  test_solver_edge_cases.py  test_solver_validation.py  test_solver_validation_extras.py
torchkm/: __init__.py  cvkall3.py  cvkdwd.py  cvkhuber.py  cvklogit.py  cvknyqr.py  cvknysdwd.py  cvknyslogit.py  cvknysqr.py  cvknyssvm.py  cvkqr.py  cvksqsvm.py  cvksvm.py  estimators.py  functions.py  kernels.py  platt.py  sklearn_wrapper.py
