[metadata]
name = torchkm
version = 4.0.2
description = A PyTorch-based library for kernel machines (SVM, DWD, kernel logistic, etc.)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Yikai Zhang
author_email = yikai-zhang@uiowa.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/YikaiZhang95/torchkm

[options]
packages = find:
include_package_data = True

# Pick one:
python_requires = >=3.10
# python_requires = >=3.8

install_requires =
    numpy>=1.23
    torch>=2.0

[options.packages.find]
include =
    torchkm
    torchkm.*

[options.extras_require]
# Everything needed to run your examples/benchmarks
examples =
    scikit-learn>=1.1
    scipy>=1.9
    seaborn>=0.12

# Development / testing / packaging
dev =
    pytest>=8
    pytest-cov>=5
    black>=24
    flake8>=7
    build>=1
    twine>=5

# Convenience extra
all =
    %(examples)s
    %(dev)s
