[metadata]
name = torchkm
version = 4.2.3
description = A PyTorch-based library for kernel machines (SVM, DWD, kernel logistic, etc.)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Yikai Zhang
author_email = yikai-zhang@uiowa.edu
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
url = https://github.com/YikaiZhang95/torchkm

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
	numpy>=1.23
	torch>=2.0

[options.packages.find]
include = 
	torchkm
	torchkm.*

[options.extras_require]
examples = 
	scikit-learn>=1.1
	scipy>=1.9
	seaborn>=0.12
dev = 
	pytest>=8
	pytest-cov>=5
	black>=24
	flake8>=7
	build>=1
	twine>=5
sklearn = 
	scikit-learn>=1.1
viz = 
	matplotlib>=3.7
all = 
	%(examples)s
	%(dev)s
	%(viz)s

[egg_info]
tag_build = 
tag_date = 0

[flake8]
max-line-length = 119
extend-ignore = E203,W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv
per-file-ignores =
    tests/test_cv*.py:F403,F405,F841
    tests/test_estimators.py:E402
    torchkm/cvkall3.py:E262,E265,E266,E501,E741,F401,F403,F841
    torchkm/cvkdwd.py:E262,E266,E501,E741,F401,F403,F841
    torchkm/cvkhuber.py:E262,E266,E501,E741,F401,F403,F841
    torchkm/cvklogit.py:E262,E266,E501,E741,F401,F403,F841
    torchkm/cvknysdwd.py:E266,E501,E741,F403,F405,F841
    torchkm/cvknyslogit.py:E266,E501,E741,F403,F405,F841
    torchkm/cvknyssvm.py:E266,E501,E741,F403,F405,F841
    torchkm/cvkqr.py:E266,E501,E741,F401,F403,F841
    torchkm/cvksqsvm.py:E262,E266,E501,E741,F401,F403,F841
    torchkm/cvksvm.py:E262,E266,E501,E741,F401,F403,F841
